tests/parser/unary-expression-error.stderr
error: expected expression
 --> $DIR/unary-expression-error.lox:1:2
  |
1 | -/
  |  ^
